# Tasks

./: README.md
Math packet/lab1/: lab1.ipynb
Math packet/lab3/: lab3.ipynb
VM/Bring radical/: main.py
VM/KahanSum/KahanSumCPP/: CMakeLists.txt  KahanSum.h  main.cpp
VM/KahanSum/KahanSumCPP_unitTest/: CMakeLists.txt  main.cpp  test.h  unitTest.h
VM/KahanSum/KahanSumPy/: main.py  test.py
VM/predator-prey model/: main.py  model1.py  model2.py  predator.py  test.py
VM/rotateTriangle/: CMakeLists.txt  main.cpp
VM/rotateTriangle/source/: RigidBody.h  Screen.h  matrix.h  quaternion.h  vector3D.h
